adjusted margins to fit 640px specifications

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, intial-scale:1.0">
 	<!-- <link href="assets/css/reset.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="assets/css/style.css">
 	<title>jmontejanoportfolio</title>
@@ -11,13 +12,13 @@
 <body>
 	<div class="wrapper">
 	<div id="header">
-		<div id="name">
+		<div class="name">
 			<h1>Julian Montejano</h1>
 		</div>
 		<div class="nav">
-			<div id="indclick"><a href="index.html">About</a></div>
-			<div id="portclick"><a href="portfolio.html">Portfolio</a></div>
-			<div id="contclick"><a href="contact.html">Contact</a></div>
+			<div class="indclick"><a href="index.html">About</a></div>
+			<div class="portclick"><a href="portfolio.html">Portfolio</a></div>
+			<div class="contclick"><a href="contact.html">Contact</a></div>
 		</div>
 	</div>
 	<section class="mainbox">
