--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, intial-scale:1.0">
 	<!-- <link href="assets/css/reset.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="assets/css/style.css">
 	<title>jmontejanoportfolio</title>
@@ -11,23 +12,22 @@
 <body>
 	<div class="wrapper">	
 		<div id="header">
-		<div id="name">
-			<h1>Julian Montejano</h1>
+			<div class="name">
+				<h1>Julian Montejano</h1>
+			</div>
+			<div class="nav">
+				<div class="indclick"><a href="index.html">About</a></div>
+				<div class="portclick"><a href="portfolio.html">Portfolio</a></div>
+				<div class="contclick"><a href="contact.html">Contact</a></div>
+			</div>
 		</div>
-		<div class="nav">
-			<div id="indclick"><a href="index.html">About</a></div>
-			<div id="portclick"><a href="portfolio.html">Portfolio</a></div>
-			<div id="contclick"><a href="contact.html">Contact</a></div>
-		</div>
-	</div>
-	</header>
 	
 		<section class="mainbox">
 			<div class="mainboxh">
 				<h1 class="headingy">About Me</h1>
 			</div>
 			<div class="underheading">
-				<img class="headshot" src="assets/images/Portrait_Placeholder.png">
+				<img class="headshot1" src="assets/images/Portrait_Placeholder.png">
 				<div id="text">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
