--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,12 @@
 			<div class="underheading1">
 				<!--place 6 placeholder images here, make sure they have empty links-->
 				<div class="portimg">
+					<a href="https://jjmonte20.github.io/Psychic-Game/">
 					<img class="headshot" src="https://images.unsplash.com/photo-1533310266094-8898a03807dd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=296ceef7015faebb5859b2f5a2bb7fe3&auto=format&fit=crop&w=1050&q=80" alt="ipad">
-					<div class="overportimg">
-						<h1>Hangman</h1>
+					<div class="overportimg" a href=>
+						<h1>Psychic Game</h1>
 					</div>
+					</a>
 				</div>
 				<div class="portimg">
 					<img class="headshot" src="https://images.unsplash.com/photo-1484704849700-f032a568e944?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=04c4af64629678d376f21fd9bd05229f&auto=format&fit=crop&w=1050&q=80" alt="over ear headphones">
