added link for my gem game to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,12 @@
 					</div>
 				</div>
 				<div class="portimg">
+					<a href="https://jjmonte20.github.io/unit-4-game/">
 					<img class="headshot" src="https://images.unsplash.com/photo-1526270100824-f033a2377d62?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1dee9b69365b305dc7b5295d934433f0&auto=format&fit=crop&w=1119&q=80" alt="turntable">
 					<div class="overportimg">
-						<h1>RPG Game</h1>
+						<h1>Gem Game</h1>
 					</div>
+					</a>
 				</div>
 				<div class="portimg">
 					<img class="headshot" src="https://images.unsplash.com/photo-1519625073050-2815233885ab?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4d4095ac76ff75761073b5d5d8fab73b&auto=format&fit=crop&w=1055&q=80" alt="earbuds">
