--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,12 @@
 					</a>
 				</div>
 				<div class="portimg">
+					<a href="https://jjmonte20.github.io/giftastic/">
 					<img class="headshot" src="https://images.unsplash.com/photo-1480359014333-3935abd88252?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d3756e90a201a29f5f12da277e6c9b13&auto=format&fit=crop&w=1050&q=80" alt="old tv">
 					<div class="overportimg">
-						<h1>Rock Paper Scissors</h1>
+						<h1>Superhero Gif producer</h1>
 					</div>
+					</a>
 				</div>
 				<div class="portimg">
 					<a href="https://jjmonte20.github.io/unit-4-game/">
